// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pagination events work correctly: Search 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/14159/Questionnaire"
  >
    Birth Notification CRVS sample
  </a>
</td>
`;

exports[`pagination events work correctly: Search 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  draft
</td>
`;

exports[`pagination events work correctly: Search 1 page 1 3`] = `
<td
  class="ant-table-cell"
>
  ONA
</td>
`;

exports[`pagination events work correctly: Search 1 page 1 4`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: Search 1 page 1 5`] = `
<td
  class="ant-table-cell"
>
  Invalid Date
</td>
`;

exports[`pagination events work correctly: Search 1 page 1 6`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/questR/14159"
  >
    View Questionnaire Responses
  </a>
</td>
`;

exports[`pagination events work correctly: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/214/Questionnaire"
  >
    NSW Government My Personal Health Record
  </a>
</td>
`;

exports[`pagination events work correctly: table row 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  draft
</td>
`;

exports[`pagination events work correctly: table row 1 page 1 3`] = `
<td
  class="ant-table-cell"
>
  New South Wales Department of Health
</td>
`;

exports[`pagination events work correctly: table row 1 page 1 4`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 1 page 1 5`] = `
<td
  class="ant-table-cell"
>
  2/19/2013
</td>
`;

exports[`pagination events work correctly: table row 1 page 1 6`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/questR/214"
  >
    View Questionnaire Responses
  </a>
</td>
`;

exports[`pagination events work correctly: table row 1 page 2 1`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/426/Questionnaire"
  >
    426
  </a>
</td>
`;

exports[`pagination events work correctly: table row 1 page 2 2`] = `
<td
  class="ant-table-cell"
>
  active
</td>
`;

exports[`pagination events work correctly: table row 1 page 2 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 1 page 2 4`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 1 page 2 5`] = `
<td
  class="ant-table-cell"
>
  1/1/2010
</td>
`;

exports[`pagination events work correctly: table row 1 page 2 6`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/questR/426"
  >
    View Questionnaire Responses
  </a>
</td>
`;

exports[`pagination events work correctly: table row 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/219/Questionnaire"
  >
    219
  </a>
</td>
`;

exports[`pagination events work correctly: table row 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  active
</td>
`;

exports[`pagination events work correctly: table row 2 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 2 page 1 4`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 2 page 1 5`] = `
<td
  class="ant-table-cell"
>
  4/21/2021
</td>
`;

exports[`pagination events work correctly: table row 2 page 1 6`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/questR/219"
  >
    View Questionnaire Responses
  </a>
</td>
`;

exports[`pagination events work correctly: table row 2 page 2 1`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/quest-form/427/Questionnaire"
  >
    NSW Government My Personal Health Record
  </a>
</td>
`;

exports[`pagination events work correctly: table row 2 page 2 2`] = `
<td
  class="ant-table-cell"
>
  draft
</td>
`;

exports[`pagination events work correctly: table row 2 page 2 3`] = `
<td
  class="ant-table-cell"
>
  New South Wales Department of Health
</td>
`;

exports[`pagination events work correctly: table row 2 page 2 4`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`pagination events work correctly: table row 2 page 2 5`] = `
<td
  class="ant-table-cell"
>
  2/19/2013
</td>
`;

exports[`pagination events work correctly: table row 2 page 2 6`] = `
<td
  class="ant-table-cell"
>
  <a
    href="/questR/427"
  >
    View Questionnaire Responses
  </a>
</td>
`;
